--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 .main-header {
-  @extend %centered;
+  text-align: center;
   padding-top: 170px;
   height: 850px;
   background: linear-gradient($color-prim, transparent 90%),
