--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,1 +1,15 @@
 
+button {
+    @extend %button;
+
+    &:focus {
+        outline: -webkit-focus-ring-color auto 0;
+    }
+}
+
+input[type='submit'] {
+    @extend %button;
+    margin: 0;
+    border-radius: 0 4px 4px 0;
+    outline: none;
+}
