--- a/sass/utilities/_extends.scss
+++ b/sass/utilities/_extends.scss
@@ -1,18 +1,3 @@
-// Center text
-
-%centered {
-  text-align: center;
-}
-
-//Containters
-
-%content {
-  width: 75%;
-  padding-left: 50px;
-  padding-right: 50px;
-  margin: auto;
-  max-width: 960px;
-}
 
 // Columns
 
@@ -28,4 +13,24 @@
   display: table;
   clear: both;
   }
+}
+
+// Buttons
+
+%button {
+  border: 0px solid #eee;
+  background: #aaa;
+  color: $color-text-light;
+  padding: 10px;
+  text-transform: uppercase;
+  margin: .5em auto 1em;
+  display: inline-block;
+  width: 10%;
+  height: $inputHeight;
+  max-width: 300px;
+  text-align: center;
+  font-weight: 300;
+  border-radius: .25em;
+  font-size: 1em;
+  cursor: pointer;
 }
