--- a/sass/layout/_overlay.scss
+++ b/sass/layout/_overlay.scss
@@ -19,9 +19,7 @@ Overlay lightbox
 
     #nextPhoto,
     #prevPhoto {
-        padding: 1.3px 1.2em;
         cursor: pointer;
-        background: black;
     }
 
     #prevPhoto {
@@ -44,7 +42,7 @@ Overlay lightbox
         background: darken($color-shadow, 10%);
         width: 70%;
         max-width: 1100px;
-        margin: 3em;
+        margin: 3em 1em;
         padding: 1em 2em;
     }
 
