--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,35 @@
 button, input[type='submit'] {
   border: 0px solid #eee;
-  background: #aaa;
+  background: #529bec;
   color: #eee;
-  padding: 10px;
   text-transform: uppercase;
   margin: .5em auto 1em;
   display: inline-block;
-  width: 10%;
+  width: 7em;
   height: 40px;
   max-width: 300px;
   text-align: center;
   font-weight: 300;
   border-radius: .25em;
   font-size: 1em;
-  cursor: pointer; }
+  cursor: pointer;
+  transition: all .2s ease-in-out; }
+  button:hover, input[type='submit']:hover {
+    background: #69a8ef; }
+
+.input {
+  margin: 1em 0;
+  min-width: 270px;
+  width: 80%;
+  max-width: 500px;
+  height: 40px;
+  padding: 10px;
+  color: #474747;
+  border: 0px solid grey;
+  border-radius: 4px 0 0 4px;
+  font-family: "Rubik", sans-serif;
+  font-size: 1em;
+  background: #ddd; }
 
 /* Base Styles -------------------- */
 * {
@@ -30,8 +46,13 @@ h2 {
   margin: 1em 0;
   font-size: 2em; }
 
+h4 {
+  margin: .3em 0;
+  font-size: 1.3em; }
+
 form {
-  margin: .6em 0;
+  margin: .6em auto;
+  width: 80%;
   display: flex;
   flex-flow: row;
   justify-content: center;
@@ -59,27 +80,41 @@ img {
 /* Main Styles --------------------- */
 button:focus {
   outline: -webkit-focus-ring-color auto 0; }
+button .btn-content {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0 1em; }
+button .sort-arrows {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  font-size: 1.2em;
+  margin-bottom: auto; }
+button .fa-sort-asc,
+button .fa-sort-desc {
+  height: 0px; }
 
 input[type='submit'] {
   margin: 0;
   border-radius: 0 4px 4px 0;
   outline: none; }
 
-.input {
-  margin: 1em 0;
-  min-width: 270px;
-  width: 80%;
-  max-width: 500px;
-  height: 40px;
-  padding: 10px;
-  color: #474747;
-  border: 0px solid grey;
-  border-radius: 4px 0 0 4px;
-  font-family: "Rubik", sans-serif;
-  font-size: 1em;
-  background: #ddd; }
-  .input:focus {
-    outline: none; }
+.ascending {
+  background: #3b8ee9; }
+  .ascending .fa-sort-desc {
+    display: none; }
+
+.descending {
+  background: #3b8ee9; }
+  .descending .fa-sort-asc {
+    display: none; }
+
+.input:focus {
+  outline: none; }
 
 .main-header {
   text-align: center;
@@ -96,20 +131,61 @@ Gallery
   justify-content: center;
   flex-wrap: wrap; }
   .gallery .item-container {
-    width: 17%;
-    margin: 1em;
-    transition: all .5s ease-in-out;
-    transform: translateY(50px);
-    opacity: 0; }
+    width: 19%;
+    margin: .5em;
+    opacity: 0;
+    padding: 0.3em;
+    background: #111;
+    overflow: hidden;
+    cursor: pointer; }
+    .gallery .item-container:hover .overlay-details {
+      opacity: 1; }
+      .gallery .item-container:hover .overlay-details:hover .overlay-album {
+        transform: translateY(0);
+        opacity: 1; }
+      .gallery .item-container:hover .overlay-details:hover .overlay-year {
+        transform: translateY(0);
+        opacity: 1; }
     .gallery .item-container .image {
       width: 100%;
       height: 100%; }
+    .gallery .item-container .overlay-details {
+      display: flex;
+      flex-flow: column;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      margin: 0 auto;
+      left: 0;
+      color: #e0e0e0;
+      background: rgba(17, 17, 17, 0.9);
+      height: 100%;
+      transition: all .2s ease-in-out;
+      opacity: 0;
+      padding: 1em; }
+      .gallery .item-container .overlay-details .overlay-album {
+        transition: all 0.2s 0.15s cubic-bezier(0, 0, 0.24, 1.14);
+        font-size: 1.4em;
+        margin: 0 0 0.5em 0;
+        transform: translateY(50px);
+        opacity: 0; }
+      .gallery .item-container .overlay-details .overlay-year {
+        font-size: 1.15em;
+        font-weight: 300;
+        transform: translateY(50px);
+        opacity: 0;
+        transition: all .2s .15s ease-in-out; }
   .gallery .animate-in {
-    animation: slideIn 1s ease forwards; }
+    animation: slideIn 0.25s ease-out forwards; }
   .gallery .animate-out {
-    animation: slideOut .25s ease forwards; }
+    animation: slideIn 0.25s ease reverse; }
 
 @keyframes slideIn {
+  0% {
+    opacity: 0;
+    transform: translateY(50px); }
   100% {
     opacity: 1;
     transform: translateY(0); } }
@@ -123,7 +199,7 @@ Overlay lightbox
   color: #eee;
   display: none;
   opacity: 0;
-  background: rgba(17, 17, 17, 0.7);
+  background: rgba(17, 17, 17, 0.9);
   position: fixed;
   width: 100%;
   height: 100%;
@@ -136,9 +212,7 @@ Overlay lightbox
     align-items: center; }
   #overlay #nextPhoto,
   #overlay #prevPhoto {
-    padding: 1.3px 1.2em;
-    cursor: pointer;
-    background: black; }
+    cursor: pointer; }
   #overlay #prevPhoto {
     margin-left: auto; }
   #overlay #nextPhoto {
@@ -151,7 +225,7 @@ Overlay lightbox
     background: rgba(0, 0, 0, 0.8);
     width: 70%;
     max-width: 1100px;
-    margin: 3em;
+    margin: 3em 1em;
     padding: 1em 2em; }
   #overlay .fa {
     font-size: 5em; }
