--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -2,46 +2,89 @@
 Gallery
 -----------*/
 .gallery {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 
-  .item-container {
-    width: 17%;
-    margin: 1em;
-    transition: all .5s ease-in-out;
-    transform: translateY(50px);
-    opacity: 0;
+    .item-container {
+        width: 19%;
+        margin: .5em;
+        opacity: 0;
+        padding: 0.3em;
+        background: $color-border-dark;
+        overflow: hidden;
+        cursor: pointer;
 
-    .image {
-      width: 100%;
-      height: 100%;
+        &:hover .overlay-details {
+          opacity: 1;
+
+          &:hover .overlay-album {
+            transform: translateY(0);
+            opacity: 1;
+          }
+          &:hover .overlay-year {
+            transform: translateY(0);
+            opacity: 1;
+          }
+        }
+
+        .image {
+            width: 100%;
+            height: 100%;
+        }
+
+        .overlay-details {
+          @include flexMix(column);
+            position: absolute;
+            top: 0;
+            width: 100%;
+            margin: 0 auto;
+            left: 0;
+            color: $color-border-light;
+            background: $color-overlay;
+            height: 100%;
+            transition: all .2s ease-in-out;
+            opacity: 0;
+            padding: 1em;
+
+            .overlay-album {
+              transition: all .2s .15s cubic-bezier(0, 0, 0.24, 1.14);
+              font-size: 1.4em;
+              margin: 0 0 0.5em 0;
+              transform: translateY(50px);
+              opacity: 0;
+            }
+
+            .overlay-year {
+              font-size: 1.15em;
+              font-weight: 300;
+              transform: translateY(50px);
+              opacity: 0;
+              transition: all .2s .15s ease-in-out;
+            }
+        }
     }
-  }
 
-  .animate-in {
-    animation : slideIn 1s ease forwards;
-    // transform: translateY(50px);
-    // opacity: 1;
-  }
-  .animate-out {
-    animation : slideOut .25s ease forwards;
-    // transform: translateY(50px);
-    // opacity: 1;
-  }
+    .animate-in {
+        animation: slideIn 0.25s ease-out forwards;
+    }
+
+    .animate-out {
+        animation: slideIn 0.25s ease reverse;
+    }
 }
-
-
 @keyframes slideIn {
-
-  100% {
-    opacity   : 1;
-    transform: translateY(0);
-  }
+    0% {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
-
 @keyframes slideOut {
-  100% {
-    opacity   : 0;
-  }
+    100% {
+        opacity: 0;
+    }
 }
